--- a/appConfig.json
+++ b/appConfig.json
@@ -3,7 +3,8 @@
 		"name": "Hash",
 		"id": "net.exit4web.hash",
 		"version": "1.3",
-		"namespace": "hash"
+		"namespace": "hash",
+		"cacheTTL":3600
 	},
 	"commands": [
 		{
